--- a/index (2).html
+++ b/index (2).html
@@ -12,13 +12,13 @@ De vez en cuando salgo con mis amigos a pasear, pero no es muy frecuente.</p>
 
 <h2>“mis ejercicios introducción HTML”</h2>
 <ul>
-<p><a href="file:///F:/ejercicios_html/html-ejer1.html">world wide web </a></p>
-<p><a href="file:///F:/ejercicios_html/html-ejer2-poema.html>Poema</a></p>
-<p><a href="file:///F:/ejercicios_html/html-ejerc3-enfasis.html>Enfasis</a></p>
-<p><a href="file:///F:/ejercicios_html/html-ejerc4-listas.html>listas</a></p>
-<p><a href="file:///F:/ejercicios_html/html-ejer5-meta%20charset%20(1).html>metacharset</a></p>
-<p><a href="file:///F:/ejercicios_html/html-ejer6-img.html%20(1).html>imagenes</a></p>
-<p><a href="file:///F:/ejercicios_html/html-ejerc7-viaje.html>viaje</a></p>
+<p><a href="ejercicios_html/html-ejer1.html">world wide web </a></p>
+<p><a href="ejercicios_html/html-ejer2-poema.html">Poema</a></p>
+<p><a href="ejercicios_html/html-ejerc3-enfasis.html">Enfasis</a></p>
+<p><a href="ejercicios_html/ejercicios_html/html-ejerc4-listas.html">listas</a></p>
+<p><a href="ejercicios_html/html-ejer5-meta%20charset%20(1).html">metacharset</a></p>
+<p><a href="ejercicios_html/html-ejer6-img.html%20(1).html">imagenes</a></p>
+<p><a href="ejercicios_html/html-ejerc7-viaje.html">viaje</a></p>
 </ul>
 
 <h2>hosting</h2>
